SUBDIRS_GNOME=monikers doc

SUBDIRS =					\
	libgnomevfs				\
	libgnomevfs-pthread			\
	idl					\
	modules					\
	data					\
	man					\
	devel-docs				\
	monikers				\
	doc					\
	test					\
	po


EXTRA_DIST =					\
	HACKING					\
	TODO					\
	autogen.sh				\
	gnome-vfs.spec				\
	gnome-vfs-2.0.pc.in			\
	xml-i18n-extract.in			\
	xml-i18n-merge.in			\
	xml-i18n-update.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gnome-vfs-2.0.pc
